# OpenEnv-Round-2

./: .gitattributes  .gitignore  Dockerfile  README.md  baseline_scores.json  client.py  hf_blog_post.md  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
assets/: generate_diagram.py
server/: app.py  business_rules.py  data_generator.py  environment.py  schema_drift.py  workflow_engine.py
server/apps/: __init__.py  base_app.py  jira.py  salesforce.py  workday.py  zendesk.py
training/: grpo_orgos.ipynb  train.py
training/orgos-training/: training_log.txt
training/orgos-training/orgos_lora_adapter/: README.md  adapter_config.json  tokenizer.json
ui/: index.html
