[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orgos"
version = "2.0.0"
description = "OrgOS — Multi-App Enterprise Workflow RL Environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "numpy",
    "faker",
    "openai",
    "httpx",
    "openenv-core",
    "aiofiles",
]

[tool.hatch.build.targets.wheel]
packages = ["server"]
